Fixes #1333 - Wrap article note in group order form

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -266,6 +266,10 @@ table {
   .pull-left {
     width: 60%;
   }
+
+  .note {
+    white-space: normal;
+  }
 }
 
 tr.order-article .article-info {
